--- a/wp-content/themes/norcal-sbdc/assets/src/scss/editor-style.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/editor-style.scss
@@ -288,3 +288,15 @@ body {
 		}
 	}
 }
+
+.wp-block[data-type="crown-blocks/featured-client-story"] {
+	a {
+		color: inherit;
+	}
+	h6 {
+		font-weight: 400;
+		+ h3 {
+			margin-top: 0;
+		}
+	}
+}
