--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -14653,10 +14653,12 @@ h1 {
   font-size: 1.5rem; }
 
 .has-extra-large-font-size {
-  font-size: 1.875rem; }
+  font-size: 1.875rem;
+  line-height: 1.4; }
 
 .has-extra-extra-large-font-size {
-  font-size: 3rem; }
+  font-size: 3rem;
+  line-height: 1.4; }
   @media (min-width: 992px) {
     .has-extra-extra-large-font-size {
       font-size: 3.75rem; } }
@@ -17101,6 +17103,53 @@ nav.pagination {
          object-fit: cover; }
     .wp-block-gallery.is-style-mosaic-8 .blocks-gallery-item figcaption {
       display: none; }
+
+/*	Featured Client Story
+---------------------------------------------------------*/
+.wp-block-crown-blocks-featured-client-story.text-color-light {
+  color: #fff; }
+
+.wp-block-crown-blocks-featured-client-story.text-color-dark {
+  color: #233053; }
+
+.wp-block-crown-blocks-featured-client-story a:hover > .inner:after {
+  opacity: 1;
+  right: 0; }
+
+.wp-block-crown-blocks-featured-client-story a > .inner {
+  overflow: hidden; }
+  @media (min-width: 992px) {
+    .wp-block-crown-blocks-featured-client-story a > .inner:after {
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      display: inline-block;
+      font-style: normal;
+      font-variant: normal;
+      font-weight: normal;
+      line-height: 1;
+      font-family: icomoon;
+      content: "";
+      -webkit-box-flex: 1;
+          -ms-flex: 1 1 auto;
+              flex: 1 1 auto;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      font-size: 2.5rem;
+      position: relative;
+      right: .5rem;
+      opacity: 0;
+      -webkit-transition: right .2s ease-out, opacity .2s;
+      transition: right .2s ease-out, opacity .2s; } }
+
+.wp-block-crown-blocks-featured-client-story h6 {
+  font-family: "proxima-nova", semplicitapro, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji; }
 
 #header {
   background-color: transparent;
