--- a/wp-content/themes/norcal-sbdc/assets/src/scss/core/_type.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/core/_type.scss
@@ -41,8 +41,8 @@ h1 {
 .has-small-font-size { font-size: 1rem; }
 .has-normal-font-size { font-size: 1.25rem; }
 .has-large-font-size { font-size: 1.5rem; }
-.has-extra-large-font-size { font-size: 1.875rem; }
-.has-extra-extra-large-font-size { font-size: 3rem; @include media-breakpoint-up(lg) { font-size: 3.75rem; } }
+.has-extra-large-font-size { font-size: 1.875rem; line-height: $line-height-base; }
+.has-extra-extra-large-font-size { font-size: 3rem; line-height: $line-height-base; @include media-breakpoint-up(lg) { font-size: 3.75rem; } }
 
 .is-style-sans-serif {
 	font-family: $font-family-sans-serif;
