--- a/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/config/_variables.scss
@@ -51,7 +51,7 @@ $yiq-text-light:            $light !default;
 $body-bg:                   $white !default;
 $body-color:                $dark-blue !default;
 
-$link-color:                $primary !default;
+$link-color:                $blue !default;
 $link-decoration:           none !default;
 $link-hover-color:          darken($link-color, 15%) !default;
 $link-hover-decoration:     none !default;
