--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -17575,7 +17575,8 @@ body.mobile-menu-active #mobile-menu-toggle .icon {
       margin-right: 2rem; } }
 
 #site-logo {
-  width: 120px;
+  width: 80px;
+  height: 48px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -17588,10 +17589,12 @@ body.mobile-menu-active #mobile-menu-toggle .icon {
   transition: opacity .2s, visibility 0s, transform .2s ease-out, -webkit-transform .2s ease-out; }
   @media (min-width: 768px) {
     #site-logo {
-      width: 150px; } }
+      width: 100px;
+      height: 60px; } }
   @media (min-width: 992px) {
     #site-logo {
-      width: 225px; } }
+      width: 150px;
+      height: 90px; } }
   #header.is-sticky #site-logo {
     opacity: 0;
     visibility: hidden;
@@ -17606,20 +17609,31 @@ body.mobile-menu-active #mobile-menu-toggle .icon {
     display: block;
     position: relative;
     width: 100%;
-    padding-top: 40%;
-    height: 0;
+    height: 100%;
     overflow: hidden; }
     #site-logo a img {
       position: absolute;
       display: block;
       left: 0;
-      right: 0;
       top: 0;
-      bottom: 0;
+      width: 100%;
+      height: 100%;
       -o-object-fit: contain;
          object-fit: contain;
-      -o-object-position: left center;
-         object-position: left center; }
+      -o-object-position: right center;
+         object-position: right center;
+      -webkit-transition: opacity .2s;
+      transition: opacity .2s; }
+      #site-logo a img.light {
+        opacity: 0; }
+      #header.text-color-light #site-logo a img.dark {
+        opacity: 0; }
+      #header.text-color-light #site-logo a img.light {
+        opacity: 1; }
+      @media (min-width: 768px) {
+        #site-logo a img {
+          -o-object-position: left center;
+             object-position: left center; } }
 
 #site-title {
   position: absolute;
@@ -18183,16 +18197,16 @@ body {
     display: block;
     position: relative;
     width: 100%;
-    padding-top: 40%;
+    padding-top: 60%;
     height: 0;
     overflow: hidden; }
     #site-footer-logo a img {
       position: absolute;
       display: block;
       left: 0;
-      right: 0;
       top: 0;
-      bottom: 0;
+      width: 100%;
+      height: 100%;
       -o-object-fit: contain;
          object-fit: contain;
       -o-object-position: left center;
