Adding support for testimonial slider block

--- a/wp-content/plugins/crown-blocks/src/block-testimonial-slider/editor.scss
+++ b/wp-content/plugins/crown-blocks/src/block-testimonial-slider/editor.scss
@@ -1,5 +1,22 @@
 
 
 .wp-block[data-type="crown-blocks/testimonial-slider"] {
-	
+	border: 1px dashed fade-out(#000, .8);
+	padding: 20px;
+	.text-color-light & {
+		border-color: fade-out(#fff, .8);
+	}
+	.text-color-dark & {
+		border-color: fade-out(#000, .8);
+	}
+	.wp-block[data-type="crown-blocks/testimonial"] {
+		border: 1px dashed fade-out(#000, .8);
+		padding: 20px;
+		.text-color-light & {
+			border-color: fade-out(#fff, .8);
+		}
+		.text-color-dark & {
+			border-color: fade-out(#000, .8);
+		}
+	}
 }
