--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -14720,10 +14720,17 @@ h1 {
 
 .has-extra-extra-large-font-size {
   font-size: 3rem;
-  line-height: 1.4; }
+  line-height: 1.2; }
   @media (min-width: 992px) {
     .has-extra-extra-large-font-size {
       font-size: 3.75rem; } }
+
+.has-extra-extra-extra-large-font-size {
+  font-size: 3rem;
+  line-height: 1.2; }
+  @media (min-width: 992px) {
+    .has-extra-extra-extra-large-font-size {
+      font-size: 5rem; } }
 
 .is-style-sans-serif {
   font-family: "semplicitapro", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
@@ -14741,7 +14748,8 @@ blockquote,
   blockquote.is-style-large,
   .wp-block-quote.is-style-large {
     font-size: 1.5rem;
-    line-height: 1.4; }
+    line-height: 1.4;
+    padding: 0; }
     @media (min-width: 768px) {
       blockquote.is-style-large,
       .wp-block-quote.is-style-large {
@@ -14763,14 +14771,15 @@ blockquote,
   .wp-block-quote .wp-block-pullquote__citation,
   .wp-block-quote cite {
     display: block;
-    margin-top: -0.25rem;
-    font-size: 1rem;
+    margin-top: 0;
+    font-size: 0.875rem;
     color: inherit;
-    font-weight: 400;
+    font-weight: 600;
+    letter-spacing: .1em;
     font-family: "semplicitapro", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    opacity: 0.6;
+    opacity: 1;
     font-style: normal;
-    text-transform: none; }
+    text-transform: uppercase; }
 
 ul.is-style-dashed {
   list-style: none;
@@ -16869,7 +16878,8 @@ nav.pagination {
   border-top: 5px solid #343a40;
   padding: 1.5rem 0rem 0;
   font-size: 1.5rem;
-  text-align: left; }
+  text-align: left;
+  line-height: 1.4; }
   @media (min-width: 768px) {
     .wp-block-pullquote {
       padding: 2rem 1rem 0;
@@ -16930,9 +16940,17 @@ nav.pagination {
     margin: 0; }
     .wp-block-pullquote blockquote:before {
       content: '“';
-      display: block; }
+      display: block;
+      font-size: 5rem;
+      line-height: 1;
+      font-style: normal;
+      font-weight: 700;
+      font-family: "semplicitapro", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+      margin-bottom: -2rem;
+      margin-top: -.5rem; }
   .wp-block-pullquote p {
-    font-size: inherit; }
+    font-size: inherit;
+    line-height: inherit; }
 
 .weekly-event-count-shortcode.dot .count {
   position: relative; }
@@ -17412,12 +17430,6 @@ nav.pagination {
         font-family: "semplicitapro", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; } }
   @media (min-width: 992px) {
     .wp-block-crown-blocks-testimonial .testimonial-source {
-      font-weight: 700;
-      color: inherit;
-      text-transform: uppercase;
-      letter-spacing: .1em;
-      font-family: "proxima-nova", semplicitapro, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-      opacity: 1;
       font-size: 1.25rem;
       margin-top: 1rem; } }
 
@@ -17562,6 +17574,77 @@ nav.pagination {
       font-size: 1.5rem;
       line-height: 1.2;
       border-radius: 0; } }
+
+/*	Content Slider
+---------------------------------------------------------*/
+.wp-block-crown-blocks-content-slider .slick-slider {
+  position: relative; }
+
+.wp-block-crown-blocks-content-slider .slick-track {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.wp-block-crown-blocks-content-slider .slick-slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  outline: none;
+  height: auto; }
+  .wp-block-crown-blocks-content-slider .slick-slide > .wp-block-crown-blocks-container {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .wp-block-crown-blocks-content-slider .slick-slide > .wp-block-crown-blocks-container > .inner {
+      width: 100%; }
+
+.wp-block-crown-blocks-content-slider .slick-dots {
+  position: absolute;
+  right: 1rem;
+  bottom: 1rem;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+  @media (min-width: 992px) {
+    .wp-block-crown-blocks-content-slider .slick-dots {
+      right: 2rem;
+      bottom: 2rem; } }
+  @media (min-width: 1200px) {
+    .wp-block-crown-blocks-content-slider .slick-dots {
+      right: 2.5rem;
+      bottom: 2.5rem; } }
+  .wp-block-crown-blocks-content-slider .slick-dots li.slick-active button {
+    opacity: 1;
+    -webkit-transform: scale(1.2);
+        -ms-transform: scale(1.2);
+            transform: scale(1.2); }
+  .wp-block-crown-blocks-content-slider .slick-dots li + li {
+    margin-left: 0.625rem; }
+  .wp-block-crown-blocks-content-slider .slick-dots button {
+    background-color: #fff;
+    padding: 0;
+    border: none;
+    outline: none;
+    width: 1rem;
+    height: 1rem;
+    overflow: hidden;
+    text-indent: -100000px;
+    border-radius: 1rem;
+    display: block;
+    opacity: .5;
+    -webkit-transition: opacity .15s, -webkit-transform .15s ease-out;
+    transition: opacity .15s, -webkit-transform .15s ease-out;
+    transition: opacity .15s, transform .15s ease-out;
+    transition: opacity .15s, transform .15s ease-out, -webkit-transform .15s ease-out; }
+    .wp-block-crown-blocks-content-slider .slick-dots button:hover {
+      opacity: 1; }
 
 #header {
   background-color: transparent;
