--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -401,12 +401,6 @@
 	}
 	.testimonial-source {
 		@include media-breakpoint-up(lg) {
-			font-weight: 700;
-			color: inherit;
-			text-transform: uppercase;
-			letter-spacing: .1em;
-			font-family: $font-family-sans-serif-alt;
-			opacity: 1;
 			font-size: 1.25rem;
 			margin-top: 1rem;
 		}
@@ -550,6 +544,75 @@
 			@extend .btn-blue;
 			@include media-breakpoint-up(lg) {
 				@include make-button-size(lg);
+			}
+		}
+	}
+}
+
+
+/*	Content Slider
+---------------------------------------------------------*/
+
+.wp-block-crown-blocks-content-slider {
+	.slick-slider {
+		position: relative;
+	}
+	.slick-track {
+		display: flex;
+	}
+	.slick-slide {
+		display: flex;
+		outline: none;
+		height: auto;
+		> .wp-block-crown-blocks-container {
+			width: 100%;
+			display: flex;
+			align-items: center;
+			> .inner {
+				width: 100%;
+			}
+		}
+	}
+	.slick-dots {
+		position: absolute;
+		right: 1rem;
+		bottom: 1rem;
+		list-style: none;
+		padding: 0;
+		margin: 0;
+		display: flex;
+		@include media-breakpoint-up(lg) {
+			right: 2rem;
+			bottom: 2rem;
+		}
+		@include media-breakpoint-up(xl) {
+			right: 2.5rem;
+			bottom: 2.5rem;
+		}
+		li {
+			&.slick-active button {
+				opacity: 1;
+				transform: scale(1.2);
+			}
+			+ li {
+				margin-left: 0.625rem;
+			}
+		}
+		button {
+			background-color: #fff;
+			padding: 0;
+			border: none;
+			outline: none;
+			width: 1rem;
+			height: 1rem;
+			overflow: hidden;
+			text-indent: -100000px;
+			border-radius: 1rem;
+			display: block;
+			opacity: .5;
+			transition: opacity .15s, transform .15s ease-out;
+			&:hover {
+				opacity: 1;
 			}
 		}
 	}
