--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_other.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_other.scss
@@ -341,6 +341,7 @@
 	padding: 1.5rem 0rem 0;
 	font-size: 1.5rem;
 	text-align: left;
+	line-height: $line-height-base;
 	@include media-breakpoint-up(md) {
 		padding: 2rem 1rem 0;
 		font-size: 1.875rem;
@@ -375,10 +376,18 @@
 		&:before {
 			content: '“';
 			display: block;
+			font-size: 5rem;
+			line-height: 1;
+			font-style: normal;
+			font-weight: 700;
+			font-family: $font-family-sans-serif;
+			margin-bottom: -2rem;
+			margin-top: -.5rem;
 		}
 	}
 	p {
 		font-size: inherit;
+		line-height: inherit;
 	}
 }
 
