--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -617,3 +617,115 @@
 		}
 	}
 }
+
+
+/*	Featured Post Slider
+---------------------------------------------------------*/
+
+.wp-block-crown-blocks-featured-post-slider {
+	margin-bottom: 2rem;
+	.post-feed {
+		> .inner {
+			
+		}
+	}
+	.post-feed > .slick-slider {
+		position: relative;
+		margin: 0;
+		.slick-arrow {
+			position: absolute;
+			top: 100%;
+			right: 0;
+			margin-top: 2rem;
+			overflow: hidden;
+			text-indent: -100000px;
+			border: none;
+			outline: none;
+			padding: 0;
+			width: 2rem;
+			height: 2rem;
+			background-color: transparent;
+			background-image: escape-svg(url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#{$primary}" class="bi bi-chevron-right" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/></svg>'));
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: contain;
+			opacity: .5;
+			transition: opacity .15s;
+			&:hover {
+				opacity: 1;
+			}
+			&.slick-prev {
+				right: 2rem;
+				transform: rotateY(180deg);
+			}
+		}
+		.slick-list {
+			margin: 0 -1rem;
+		}
+	}
+	article {
+		padding: 0 1rem;
+		outline: none;
+		.entry-date {
+			line-height: 1;
+			margin-bottom: 1rem;
+			> .inner {
+				display: flex;
+				align-items: center;
+			}
+			.month {
+				font-size: 1.375rem;
+				text-transform: uppercase;
+				font-weight: 600;
+				margin-right: 0.5rem;
+			}
+			.date {
+				font-size: 3.125rem;
+				font-weight: 700;
+				font-family: $font-family-sans-serif-alt;
+			}
+			.line {
+				display: block;
+				margin-left: 1rem;
+				flex: 1 1 auto;
+				border-top: 4px solid $red;
+			}
+		}
+		.entry-topics {
+			margin-bottom: 1.5rem;
+			.topic {
+				display: inline-block;
+				font-size: 0.875rem;
+				line-height: $line-height-sm;
+				padding: .25rem .75rem;
+				border: 3px solid rgba($dark-gray, .75);
+				border-radius: 10rem;
+				text-transform: uppercase;
+				letter-spacing: .1em;
+				font-family: $font-family-sans-serif-alt;
+				color: rgba($dark-gray, .6);
+				font-weight: 700;
+			}
+		}
+		.entry-title {
+			font-size: 1.75;
+			font-weight: 400;
+			a {
+				color: inherit;
+			}
+		}
+		.entry-link {
+			margin-top: 1.5rem;
+			margin-bottom: 0;
+			a {
+				@extend .btn;
+				@extend .btn-link;
+				@extend .btn-link-blue;
+				@extend .btn-has-arrow-icon;
+			}
+		}
+	}
+	.block-link {
+		margin-top: 2rem;
+	}
+}
